--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "jspdf": "^2.5.1",
-    "openai": "^4.21.0",
+    "openai": "^4.24.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
