--- a/package.json
+++ b/package.json
@@ -15,20 +15,19 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jspdf": "^2.5.1",
+    "next": "^14.0.4",
     "openai": "^4.24.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
